Fixes paragraph text alignment

--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -6,6 +6,7 @@
 
 .productsClass > p {
   color:#9DAFBD;
+  text-align: left;
 }
 
 .productsClass h4 {
